Minor warning fixes